--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,10 +81,14 @@ extra:
 # Equations
 extra_javascript:
   - javascripts/config.js
+  - javascripts/mathjaxhelper.js
   - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 markdown_extensions:
+  - extra
+  - tables
+  - fenced_code
   - pymdownx.arithmatex:
       generic: true
   - mdx_math
