atualização 07 de outubro

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -172,6 +172,7 @@ nav:
     - Licença: integral/creative-commons.md
   - Listas:
     - Limite: listas/limite.md
+    - Limite extra: listas/limite-extra.md
     - Derivada: listas/derivada.md
     - Aplicações: listas/aplicacao.md
     - Integral: listas/integral.md
