--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ site_url: https://cetensc1.github.io/
 site_author: Centro de Ciência e Tecnologia em Energia e Sustentabilidade (CETENS)
 site_description: >-
   App Web para Cálculo I do Centro de Ciência e Tecnologia em Energia e Sustentabilidade (CETENS)
-  da Universidade Federal do Recôncavo da Bahia.
+  da Universidade Federal do Recôncavo da Bahia
 
 # Repository
 repo_name: cetensc1
